<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="225dp"
                android:layout_height="350dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/img_drink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_aqua" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_nama"
                style="@style/TextKulkasKu.Detail.Normal"
                android:layout_toEndOf="@id/cardView"
                android:text="@string/nama_minuman" />

            <TextView
                android:id="@+id/tv_nama_minuman"
                style="@style/TextKulkasKu.Detail.Bold"
                android:layout_below="@id/tv_nama"
                android:layout_toEndOf="@+id/cardView"
                android:text="@string/nama_minuman" />

            <TextView
                android:id="@+id/tv_harga"
                style="@style/TextKulkasKu.Detail.Normal"
                android:layout_below="@+id/tv_nama_minuman"
                android:layout_toEndOf="@id/cardView"
                android:text="@string/harga_minuman" />

            <TextView
                android:id="@+id/tv_harga_minuman"
                style="@style/TextKulkasKu.Detail.Bold"
                android:layout_below="@id/tv_harga"
                android:layout_toEndOf="@+id/cardView"
                android:text="@string/harga_minuman" />

            <TextView
                android:id="@+id/tv_tagline"
                style="@style/TextKulkasKu.Detail.Normal"
                android:layout_below="@+id/tv_harga_minuman"
                android:layout_toEndOf="@id/cardView"
                android:text="@string/tagline_minuman" />

            <TextView
                android:id="@+id/tv_tag_minuman"
                style="@style/TextKulkasKu.Detail.Bold"
                android:layout_below="@id/tv_tagline"
                android:layout_toEndOf="@+id/cardView"
                android:text="@string/tagline_minuman" />

            <TextView
                android:id="@+id/tv_detail"
                style="@style/TextKulkasKu.Detail.Normal"
                android:layout_below="@+id/tv_tag_minuman"
                android:layout_toEndOf="@id/cardView"
                android:text="@string/detail_minuman" />

            <TextView
                android:id="@+id/tv_detail_minuman"
                style="@style/TextKulkasKu.Detail.Bold"
                android:layout_below="@id/tv_detail"
                android:layout_toEndOf="@+id/cardView"
                android:text="@string/detail_minuman" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_logo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/logo_aqua"
                    app:civ_border_color="@color/grey"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/tv_nama_perusahaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/img_logo"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/nama_perusahaan"
                    android:textSize="20sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextKulkasKu.Detail.BoldNoMargin"
                    android:text="@string/komposisi" />

                <TextView
                    android:id="@+id/tv_komposisi"
                    style="@style/TextKulkasKu.Detail"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/contoh_komposisi" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextKulkasKu.Detail.BoldNoMargin"
                    android:text="@string/produk" />

                <TextView
                    android:id="@+id/tv_produk"
                    style="@style/TextKulkasKu.Detail"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/contoh_produk" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_website"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/kunjungi_website"
                android:textAllCaps="false" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                android:layout_width="38dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                app:icon="@drawable/ic_baseline_share_24"
                app:iconGravity="textStart"
                />
        </LinearLayout>



    </LinearLayout>

</ScrollView>