<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_card"
    android:layout_width="380dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="146dp"
            android:layout_height="match_parent"
            app:cardElevation="5dp"
            app:cardCornerRadius="15dp"
            >

            <ImageView
                android:id="@+id/img_drink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_aqua" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_nama_minuman"
            style="@style/TextKulkasKu.TitleItem.Nama"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/cardView"
            android:text="@string/nama_minuman" />

        <TextView
            android:id="@+id/tv_harga_minuman"
            android:layout_marginTop="5dp"
            style="@style/TextKulkasKu.TitleItem.Harga"
            android:text="@string/harga_minuman"
            android:layout_toEndOf="@+id/cardView"
            android:layout_below="@+id/tv_nama_minuman"
            />

        <TextView
            android:id="@+id/tv_tag_minuman"
            style="@style/TextKulkasKu.TaglineItem"
            android:layout_below="@+id/tv_harga_minuman"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/cardView"
            android:text="@string/tagline_minuman" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>